# ocaml-typing-benchmark

./: .gitignore  README.md  dune-project  ocaml_typing_benchmark.opam
benchmark/: benchmark.ml  benchmark_infer.ml  dune  results.txt
driver/: compmisc.ml  compmisc.mli  dune
parsing/: ast_helper.ml  dune  parse.ml  parse.mli  pprintast.ml
stdlib/: dune
typing/: .depends  cmt_format.ml  dune  printtyped.ml  typemod.ml  typemod.mli
utils/: config.ml  dune
