(library
 (name ocaml_typing_benchmark_driver)
 (public_name ocaml_typing_benchmark.driver)
 (flags
  (:standard
   -w
   -9
   -open
   Ocaml_typing_benchmark_utils
   -open
   Ocaml_typing_benchmark_parsing
   -open
   Ocaml_typing_benchmark_typing))
 (libraries
  ocaml_typing_benchmark_utils ocaml_typing_benchmark_parsing ocaml_typing_benchmark_typing))
